Add images to 32

--- a/content/6-interventions/32.md
+++ b/content/6-interventions/32.md
@@ -33,7 +33,9 @@ The Neue Pinakothek was founded in 1853 by Ludwig I (1786–1868). The former ki
 
 The Sammlung Schack is also a private collection, founded by Count Adolf Friedrich von Schack (1815–1894), a wealthy, well-traveled poet and historian of art and literature. When he settled in Munich in 1855, the vibrant local art scene inspired him to begin building up a collection of contemporary art. Schack had his own ideas regarding suitable themes, and he commissioned local artists to create paintings for him in keeping with his artistic and literary ideals. In addition, he also commissioned young artists to create eighty-four full-size copies, predominantly of Venetian Renaissance paintings.
 
-The two museums have in common that they were founded as private collections; however, while Schack’s collection has remained an almost unaltered ensemble, the Neue Pinakothek continued to expand after Ludwig’s death ([**fig. 32.1**](fig-32-1)).
+The two museums have in common that they were founded as private collections; however, while Schack’s collection has remained an almost unaltered ensemble, the Neue Pinakothek continued to expand after Ludwig’s death ([fig. 32.1](#fig-32-1)).
+
+{% figure 'fig-32-1' %}
 
 The Sammlung Schack comprises 267 paintings, mostly painted over the course of about twenty-five years, in the 1860s and 1870s. After Schack’s death, the collection became public property, and it has been part of the Bayerische Staatsgemäldesammlungen since 1939.
 
@@ -41,7 +43,9 @@ By contrast, the Neue Pinakothek’s collection consists of over 3,300 paintings
 
 A decisive difference between the two collections is their acquisition history. Schack acquired at least 70% of his works more or less directly from the artists themselves, with about 90% of his paintings bought within ten years of being painted. Their aging and restoration backgrounds are thus directly tied to the history of the collection itself.
 
-By contrast, only about a third of the paintings in the Neue Pinakothek were acquired soon after they were painted, while the rest entered the collection with individual histories going back up to 200 years ([**fig. 32.2**](fig-32-2)).
+By contrast, only about a third of the paintings in the Neue Pinakothek were acquired soon after they were painted, while the rest entered the collection with individual histories going back up to 200 years ([fig. 32.2](#fig-32-2)).
+
+{% figure 'fig-32-2' %}
 
 ## Conservation History of the Collections
 
@@ -73,11 +77,13 @@ The results for Neue Pinakothek and Sammlung Schack are summarized below. Differ
 
 ## Results
 
-Taken together, the two collections contain 2,475 canvas paintings, which makes up 71% of the total number of paintings ([**fig. 32.3a**](fig-32-3)).
+Taken together, the two collections contain 2,475 canvas paintings, which makes up 71% of the total number of paintings ([fig. 32.3a](#fig-32-3)).
 
-Unfortunately, the existing records for these paintings turned out to be less complete than hoped. Thirty percent of the canvas paintings have no files or reports; for a further 27% only technological information is available, whereas 43% have at least one restoration report ([**fig. 32.3b**](fig-32-3)). Many reports mention earlier interventions for which there is no documentation, even though the work must have been carried out while the piece was in the museum’s possession. Apparently, despite the long tradition of documenting conservation treatments and a simplified procedure using forms, the obligation to record interventions was often not met. Furthermore, information regarding measures undertaken prior to the museum’s acquisition is almost always missing. Consequently, the study had to be reduced to the 1,740 canvas paintings (70%) for which evaluable reports are archived—a selection that is nevertheless considered sufficient for the evaluation carried out here.
+{% figure 'fig-32-3' %}
 
-The different measures considered in detail (**[figs. 32.4](fig-32-4)** and [**32.5**](fig-32-5)) are as follows:
+Unfortunately, the existing records for these paintings turned out to be less complete than hoped. Thirty percent of the canvas paintings have no files or reports; for a further 27% only technological information is available, whereas 43% have at least one restoration report ([fig. 32.3b](#fig-32-3)). Many reports mention earlier interventions for which there is no documentation, even though the work must have been carried out while the piece was in the museum’s possession. Apparently, despite the long tradition of documenting conservation treatments and a simplified procedure using forms, the obligation to record interventions was often not met. Furthermore, information regarding measures undertaken prior to the museum’s acquisition is almost always missing. Consequently, the study had to be reduced to the 1,740 canvas paintings (70%) for which evaluable reports are archived—a selection that is nevertheless considered sufficient for the evaluation carried out here.
+
+The different measures considered in detail ([figs. 32.4](#fig-32-4) and [32.5](#fig-32-5)) are as follows:
 
 -   88 of the canvases are glued onto rigid supports, 15 of them on wood and 73 on cardboard. Knowledge of the collection indicates that the wooden supports were attached as restoration measures. For the paintings described as “canvas on cardboard”, the date of and reason for the cardboard backing cannot be confirmed. Is it a prefabricated, two-layered support or an unstretched canvas—typical for oil sketches—which for various reasons was subsequently glued onto cardboard?
 
@@ -87,9 +93,13 @@ The different measures considered in detail (**[figs. 32.4](fig-32-4)** and [**3
 
 -   1,181 of the paintings are thought to be unlined. Documentary analysis and experience shows that measures may still have been carried out on the canvases. Even before thread-by-thread tear mending established itself in the 1980s, tears were often only mended locally, for example by attaching patches of tow or fabric to the back. Tacking-edge repairs can range from local tear stabilization to restretching a painting after complete strip-lining—without necessarily having been documented.
 
+{% figure 'fig-32-4' %}
+
+{% figure 'fig-32-5' %}
+
 According to a subjective impression of the entire collection, the above result—that approximately 70% of the 1,740 documented paintings have not yet been lined, marouflaged, or impregnated—appears to be on the low side. The reason is that the 735 canvas paintings (30% of the total number) without documentation are predominantly pictures that have been kept in storage for decades not exhibited. On the whole, if there were no plans to show the paintings, they were not restored.
 
-Despite the limited informative value of the data found, its temporal distribution will be presented graphically ([**fig. 32.6**](fig-32-6)), as it reveals certain trends. For two-thirds of the 1,740 verifiable treatments, we know the year of execution. Considering the distribution along the time axis, we see a gradual increase becoming more apparent from the 1970s onwards. Knowing that interventions were not consistently documented, this increase cannot be equated with an increase in conservation measures. Rather, it shows the professionalization of conservation, and that trend led to more systematic documentation. The graph does not indicate the scope of the measures either: minimal intervention is represented in the same manner as extensive conservation work. Taken separately:
+Despite the limited informative value of the data found, its temporal distribution will be presented graphically ([fig. 32.6](#fig-32-6)), as it reveals certain trends. For two-thirds of the 1,740 verifiable treatments, we know the year of execution. Considering the distribution along the time axis, we see a gradual increase becoming more apparent from the 1970s onwards. Knowing that interventions were not consistently documented, this increase cannot be equated with an increase in conservation measures. Rather, it shows the professionalization of conservation, and that trend led to more systematic documentation. The graph does not indicate the scope of the measures either: minimal intervention is represented in the same manner as extensive conservation work. Taken separately:
 
 -   None of the marouflages can be definitively dated. The same applies to a large number of the linings; 60% of the wax but only 19% of the paste linings can be classified by date. The first documented wax lining took place in 1952, with the first recorded use of a heating table in 1965.[^10] The years leading up to the last documented wax lining—carried out in 1976, shortly after the Greenwich Conference—mark the heyday of this method. The fact that this period coincides with a general increase in documentation explains why the number of unreported cases of wax linings is lower than that of paste linings. Paste was also used to line paintings during and after the boom in wax treatments, recorded for the last time in 1995.[^11] The exact formulation of the adhesive or a description of the working method is very rarely provided.[^12]
 
@@ -100,6 +110,8 @@ Despite the limited informative value of the data found, its temporal distributi
 -   As mentioned earlier, localized methods for treating canvas tears can be inferred only from individual restoration reports. Knowledge of the collection indicates that far more partial repairs to old tears have been carried out than were ever documented. Perhaps local treatments had to be somehow unusual to merit being described in a report. In 1935, for instance, a 20-centimeter tear was repaired using only thin tissue patches. Treating such a sizable tear without lining seems to have been unique. It was not until the 1970s that tears were regularly mended with adhesive or holes closed with fabric inlays without the additional application of a patch. For about ten years, Calaton CB[^14] was the adhesive of choice. It was replaced by a standard white glue[^15] commonly used by joiners. An alternative was a two-component epoxy resin adhesive[^16] that was considered advantageous not least because of its resistance to solvents used in subsequent work steps. By the time of Heiber’s 1996 publication on thread-by-thread tear mending, a mixture of sturgeon glue and wheat starch paste had become the predominant adhesive in use.
 
 -   For the first time in 1917, and occasionally thereafter, we find reports specifically mentioning that a painting had been left on its old strainer or stretcher, or that these had been repaired. Again, this approach was probably written down because it was unusual. Common practice was to replace old stretchers when they were regarded as insufficient, particularly in cases were the canvas had to be taken off its stretcher anyway. As awareness grew of how much information could be gleaned from various types of stretchers, historical labels, and original canvas attachments, stretchers stopped being replaced—around 1980. Remaining stretchers that no longer carried their original painting but had not yet been discarded were gathered together to form a collection.[^17]
+
+{% figure 'fig-32-6' %}
 
 ## Evaluation of the Results
 
