Add images to 33

--- a/content/6-interventions/33.md
+++ b/content/6-interventions/33.md
@@ -20,7 +20,9 @@ Conserving canvas at the Victoria and Albert Museum (V&A) started with its earli
 
 This essay discusses setting priorities for treatment and will show how early preventive conservation practices at the SKM have had a profound effect on the condition of the paintings collection. I will describe some recent treatments of a variety of canvas paintings and end with thoughts on their future conservation needs.
 
-The paintings at the V&A are quite varied. They number around 2,000 works and span 2,000 years—from first-century Roman fresco to contemporary paintings from India and Southeast Asia. There are some remarkable German medieval paintings, the fourteenth-century *Apocalypse Triptych* from Hamburg by Master Bertram (d. 1415),[^1] and a fifteenth-century oil on canvas from Cologne by the Master of the St. Ursula Legend ([**fig. 33.1**](fig-33-1)). Italian Renaissance works include panels by Carlo Crivelli (ca. 1430–1495) and Sandro Botticelli (1444/45–1510). There are seventeenth- and eighteenth-century Netherlandish paintings and significant collections of nineteenth-century Continental and British paintings, including ninety-two oil sketches by John Constable (1776–1837). Among the twentieth-century additions are a large collection of theatrical cloths, including backdrops used by the Ballets Russes.
+The paintings at the V&A are quite varied. They number around 2,000 works and span 2,000 years—from first-century Roman fresco to contemporary paintings from India and Southeast Asia. There are some remarkable German medieval paintings, the fourteenth-century *Apocalypse Triptych* from Hamburg by Master Bertram (d. 1415),[^1] and a fifteenth-century oil on canvas from Cologne by the Master of the St. Ursula Legend ([fig. 33.1](#fig-33-1)). Italian Renaissance works include panels by Carlo Crivelli (ca. 1430–1495) and Sandro Botticelli (1444/45–1510). There are seventeenth- and eighteenth-century Netherlandish paintings and significant collections of nineteenth-century Continental and British paintings, including ninety-two oil sketches by John Constable (1776–1837). Among the twentieth-century additions are a large collection of theatrical cloths, including backdrops used by the Ballets Russes.
+
+{% figure 'fig-33-1' %}
 
 In recent years, paintings have been acquired that have a particular relevance to some other part of the collection or have been bought as a pair of objects; for example, portraits together with the item of clothing or jewelry that the sitter is wearing, such as the *Portrait of Edward Curtis* (1750), by Marco Benefial (1684–1764), (E.381-2019), together with Curtis’s splendid brocaded taffeta waistcoat (T.22-2019).
 
@@ -42,9 +44,13 @@ Redgrave went on to describe the measures taken after the dirt had been removed 
 
 > In order to secure the picture on canvas from the injury arising from the accumulation of dust behind them, they have all been protected by painted canvas stretched over them, so as to exclude both damp and dust.” ([[Committee of Council on Education 1858\|, 65]])
 
-The painted canvas backing has the appearance of imitation leather, it was stretched over the reverse of the painting and tacked to the back of the frame. Narrow wooden fillets were pinned along the edges to improve the seal. An example of this method can be seen on a painting by Johann Gottfried Steffan (1815–1905), *The Torrent,* 1844/1848 (1545–1869), and probably dates from 1869, the year it was acquired ([**fig. 33.2**](fig-33-2)).
+The painted canvas backing has the appearance of imitation leather, it was stretched over the reverse of the painting and tacked to the back of the frame. Narrow wooden fillets were pinned along the edges to improve the seal. An example of this method can be seen on a painting by Johann Gottfried Steffan (1815–1905), *The Torrent,* 1844/1848 (1545–1869), and probably dates from 1869, the year it was acquired ([fig. 33.2](#fig-33-2)).
 
-As mentioned earlier, paintings from the collection were regularly sent to art schools around the country for students to copy. The destinations were noted on labels on the reverse, possibly stamped on arrival at the art school. One such label on the reverse of *The Torrent* records that it went to Northampton and Salford in 1913, and Truro in 1922. An adjacent label contains an injunction not to hang the painting in direct sunlight. The galleries at South Kensington were carefully designed to ensure that the viewer was not disturbed by reflections from the central roof light (skylight), described as “glitter,” including those high up on the walls in a dense double or triple hang ([**fig. 33.3**](fig-33-3)) ([[Committee of Council on Education 1858\|, 62]]).
+{% figure 'fig-33-2' %}
+
+As mentioned earlier, paintings from the collection were regularly sent to art schools around the country for students to copy. The destinations were noted on labels on the reverse, possibly stamped on arrival at the art school. One such label on the reverse of *The Torrent* records that it went to Northampton and Salford in 1913, and Truro in 1922. An adjacent label contains an injunction not to hang the painting in direct sunlight. The galleries at South Kensington were carefully designed to ensure that the viewer was not disturbed by reflections from the central roof light (skylight), described as “glitter,” including those high up on the walls in a dense double or triple hang ([fig. 33.3](#fig-33-3)) ([[Committee of Council on Education 1858\|, 62]]).
+
+{% figure 'fig-33-3' %}
 
 In the recent survey, we found twelve paintings that still had these nineteenth-century painted canvas backings, including two from the Sheepshanks gift in 1856, one of which is *The Hermit,* ca.1841, by Charles Landseer (1799–1879) (FA.105\[O\]). The canvas is in plane and appears sound; until the painting is requested for display or loan or exhibits some structural problem, there seems no pressing need to unframe it.
 
@@ -56,7 +62,9 @@ With the exception of a limited number of paintings for redesigned galleries, ou
 
 I have carried out many strip-linings, where the tacking edges of the lining canvas were starting to fail. I have been so impressed with the skill of the Victorian liners, F. Haines & Sons, who had premises very close to the museum, off Thurloe Square.[^3] Haines & Sons carried out various conservation treatments on paintings for the museum, as well as lining, although their treatment of canvas is the focus here. A painting by William Redmore Bigg (1755–1828), *A Cottage Interior: An Old Woman Preparing Tea,* 1793 (199-1885), came into the studio recently, prior to going on loan. The label on the reverse reads, “199-1885 Bigg / Lined, covered with thin / coat of varnish, new stretcher / by Messrs Haines & Sons / 21st July 1893.” I am a great admirer of these labels with their succinct treatment reports.
 
-The correspondence between the SKM officials and Haines & Sons is in the museum archives and includes many estimates for proposed work.[^4] In an estimate dated May 25, 1896, section A lists eight paintings for lining ([**fig. 33.4**](fig-33-4)). The reason for my good opinion of the Haines & Sons’s glue-paste linings is that I have rarely seen weave emphasis, squashed paint, or moating around impasto—damage to the paint surface that could be attributed to the lining. They used a fine linen for the lining canvas, always a finer weave than the original canvas, although admittedly, they did remove the original tacking edges. Over one hundred years later, the support within the picture plane is still sound. The only problem I have encountered is that, on some paintings, the lining canvas is starting to fail along the fold line. The thin fabric that was used and its brittleness where impregnated with the glue-paste adhesive combine to create lines of weakness at the place of closest contact with the wooden stretcher—hence the strip-linings.
+The correspondence between the SKM officials and Haines & Sons is in the museum archives and includes many estimates for proposed work.[^4] In an estimate dated May 25, 1896, section A lists eight paintings for lining ([fig. 33.4](#fig-33-4)). The reason for my good opinion of the Haines & Sons’s glue-paste linings is that I have rarely seen weave emphasis, squashed paint, or moating around impasto—damage to the paint surface that could be attributed to the lining. They used a fine linen for the lining canvas, always a finer weave than the original canvas, although admittedly, they did remove the original tacking edges. Over one hundred years later, the support within the picture plane is still sound. The only problem I have encountered is that, on some paintings, the lining canvas is starting to fail along the fold line. The thin fabric that was used and its brittleness where impregnated with the glue-paste adhesive combine to create lines of weakness at the place of closest contact with the wooden stretcher—hence the strip-linings.
+
+{% figure 'fig-33-4' %}
 
 One of the paintings listed in the estimate, by David Teniers the Younger (1610–1690), *Rocky Landscape with Figures,* ca. 1660–1690 (1349-1869), came into the studio in 2014 prior to going on loan. The canvas support was sound and in plane. The label on the reverse reads, “1349-1869 Lined, the surface cleaned by / sponging. The old varnish removed by / friction and the picture thinly varnished / by Messrs F. Haines & Sons June 27, 1896.” There were two very small areas of lifting paint and a thin film of surface dirt, showing some air exchange into the frame. I fixed the paint with sturgeon glue and removed the dirt from front and back. It is satisfying to be able to link the estimate to the painting and see that the treatment was carried out and was effective.
 
@@ -70,7 +78,9 @@ The first donations and bequests in the 1850s to 1880s, which were near-contempo
 
 I have not been able to establish exactly when the Art Work Room was created, nor how many people worked there, but it was active in the first half of the twentieth century and was the beginning of an in-house conservation department. Harry Rogers was head of Paintings Conservation in 1973, when my predecessor, Susannah Edmunds, joined the V&A. Rogers had started work at the museum in the Art Work Room (A.W.R.) at sixteen. His employment at the V&A spanned over fifty years, with a break during World War II, when he was in the armed forces. We frequently find handwritten labels on backboards, such as, “Glazed and backed up, A.W.R.” along with the date. When a painting by Daniel Hardy, *Sunday Afternoon* (F.16) was prepared for loan a few years ago, I found a label in Harry Rogers’s handwriting on the reverse: “Frame cleaned, re / paired and Backed up / By A.W.R 22.4.21.”
 
-Of the 102 canvases hanging in the Paintings Galleries at the V&A, forty are unlined, while a further eleven have original linings. Within the Paintings Galleries there are three rooms dedicated to oil paintings from the Sheepshanks, Dyce, Townshend, Forster, and Ionides gifts or bequests. In many cases, the collectors had bought the paintings directly from the artists ([**fig. 33.5**](fig-33-5)). I am certain that the reason so many of these paintings are well preserved, with many canvases still unlined and not in need of lining, is due to the early policy of glazing and backing.
+Of the 102 canvases hanging in the Paintings Galleries at the V&A, forty are unlined, while a further eleven have original linings. Within the Paintings Galleries there are three rooms dedicated to oil paintings from the Sheepshanks, Dyce, Townshend, Forster, and Ionides gifts or bequests. In many cases, the collectors had bought the paintings directly from the artists ([fig. 33.5](#fig-33-5)). I am certain that the reason so many of these paintings are well preserved, with many canvases still unlined and not in need of lining, is due to the early policy of glazing and backing.
+
+{% figure 'fig-33-5' %}
 
 ## Recent Treatments
 
@@ -90,11 +100,15 @@ This was the less recent project: it was twenty years ago that Éowyn Kerr, then
 
 At it happened, the loan that started the investigation was cancelled, and it was not until 2005 that the treatment took place. It was a joint project with Jim Dimond, who recruited several other colleagues to help.[^11] The *Train Bleu* has since been flown in five exhibitions and is holding up so far. It was in the V&A exhibition *Diaghilev and the Golden Age of the Ballet Russes 1909–1929,* in London, in 2012, and at the final venue in Washington, DC, in 2013.
 
-Three Korean paintings on cotton were acquired recently, which date from the early 2000s.[^12] They arrived rolled and had many distortions. They were returned to plane through moisture treatments while on a loom. Strips of kraft paper were attached to the canvas edges and then wetted and attached to the loom ([**fig. 33.6**](fig-33-6)). Humidity was introduced to the reverse of the canvas with damp blotting paper through Gore-Tex. The paper shrinkage exerted tension as the whole structure slowly dried. Fiona Rutka, a student intern, did most of the work on these paintings. They were put onto new stretchers over loose linings of polyester sailcloth.
+Three Korean paintings on cotton were acquired recently, which date from the early 2000s.[^12] They arrived rolled and had many distortions. They were returned to plane through moisture treatments while on a loom. Strips of kraft paper were attached to the canvas edges and then wetted and attached to the loom ([fig. 33.6](#fig-33-6)). Humidity was introduced to the reverse of the canvas with damp blotting paper through Gore-Tex. The paper shrinkage exerted tension as the whole structure slowly dried. Fiona Rutka, a student intern, did most of the work on these paintings. They were put onto new stretchers over loose linings of polyester sailcloth.
+
+{% figure 'fig-33-6' %}
 
 Preparations for a touring exhibition of the works of John Constable meant that 50 oil sketches passed through the studio in 2010.[^13] *Landscape with Double Rainbow,* 1812 (33.7 x 38.4 cm) (328-1888), is on a mixture of supports, paper adhered to canvas as well as an original lining. Constable used a variety of supports for his oil sketches: frequently a homemade paper laminate, primed in different colors. At other times he reused his own canvas paintings, cutting them into small sections ([[Costaras and Richardson 2010]]). It is possible that in this instance he tried to peel off one layer of paper to get a fresh surface to paint on; the surface is irregular, with sections of paper missing. Clare Richardson and I speculated that Constable used the nearest support to hand to capture the fleeting atmospheric effect. An X-ray image shows at least one other composition within the support ([[Costaras and Richardson 2010\|, 151]]).
 
-Constable painted over the top of the torn paper and canvas support regardless, lined it, and continued to work on it. When it came to the studio, the canvases were delaminating and the edges were frail. Wheat-starch paste was used to reattach the two canvases and left to dry under weight. With the help of Susan Catcher, our colleague in Paper Conservation, we strip-lined the painting with wheat-starch paste and Japanese paper ([**fig. 33.7**](fig-33-7)). Wheat-starch paste was also used to attach the paper to the strainer. Serendipitously, the shrinkage of the paper as it dried exerted a gentle tension on the canvas without making it too taut.
+Constable painted over the top of the torn paper and canvas support regardless, lined it, and continued to work on it. When it came to the studio, the canvases were delaminating and the edges were frail. Wheat-starch paste was used to reattach the two canvases and left to dry under weight. With the help of Susan Catcher, our colleague in Paper Conservation, we strip-lined the painting with wheat-starch paste and Japanese paper ([fig. 33.7](#fig-33-7)). Wheat-starch paste was also used to attach the paper to the strainer. Serendipitously, the shrinkage of the paper as it dried exerted a gentle tension on the canvas without making it too taut.
+
+{% figure 'fig-33-7' %}
 
 The above are just a few examples of types of canvas treatments undertaken at the V&A in recent years, and they give a sense of the variety of the works in the collection.
 
@@ -114,7 +128,7 @@ Inevitably, the public program sets conservation priorities to a large extent, b
 
 The decant of the reserve collection provided an opportunity to apply preventive conservation wherever it was lacking. Between the unlined canvases and the nineteenth-century glue-paste linings, with due credit to the work of my predecessors throughout the twentieth century, I have not had to carry out a single lining in the twenty-five years that I worked at the V&A. I carried out many strip-linings and tear repairs. Collaborating with my colleagues in Paper Conservation, I have found many uses for Japanese paper and wheat-starch paste.
 
-In the foreseeable future, I expect *The Martyrdom of St. Ursula and the 11,000 Virgins,* mentioned earlier, will need relining. This fifteenth-century painting was one of the V&A’s earliest acquisitions, in 1857, and it was already lined when it arrived in the museum. The tacking edges of the lining canvas are frail, and it is fairly large: 163.3 x 232.4 cm (see [**fig. 33.1**](fig-33-1)). When the time comes that this and other canvases do need lining, will there be anyone who does enough paste lining to be skilled at it? Although minimal treatments have their place, I am concerned about a gap in skills due to lack of practice.
+In the foreseeable future, I expect *The Martyrdom of St. Ursula and the 11,000 Virgins,* mentioned earlier, will need relining. This fifteenth-century painting was one of the V&A’s earliest acquisitions, in 1857, and it was already lined when it arrived in the museum. The tacking edges of the lining canvas are frail, and it is fairly large: 163.3 x 232.4 cm (see [fig. 33.1](#fig-33-1)). When the time comes that this and other canvases do need lining, will there be anyone who does enough paste lining to be skilled at it? Although minimal treatments have their place, I am concerned about a gap in skills due to lack of practice.
 
 Beyond paste lining, it is better still to have experience with a range of different lining techniques—and thus to be able to choose the most appropriate method in each case. After hearing the talks at the 2019 Conserving Canvas symposium, I am very hopeful that the Getty Foundation initiative, of which the symposium was a part, will ensure that the expertise continues to exist.
 
@@ -150,9 +164,7 @@ I would like to thank all the colleagues past and present who have worked on the
 
 [^11]: Julia Nagle, Catherine Nunn, and Sam Hodge.
 
-[^12]: Ch’ol Muk Ri (North Korean), *Uri chungdae sosik,* 2005. Oil on cotton canvas, 81 × 77 cm (FE.89-2009).
-
-    Hyong Sik Rim (Korean), *Ch’ukcheoneul aptugo,* 2007. Oil on cotton canvas, 72 x 100 cm (FE. 90-2009). Sang Mun Ri (North Korean), *Mount Paektu and Heaven Lake,* 2008. Oil on cotton canvas, 91 x 131 cm (FE 93-2009). All dimensions are for paintings after stretching.
+[^12]: Ch’ol Muk Ri (North Korean), *Uri chungdae sosik,* 2005. Oil on cotton canvas, 81 × 77 cm (FE.89-2009). Hyong Sik Rim (Korean), *Ch’ukcheoneul aptugo,* 2007. Oil on cotton canvas, 72 x 100 cm (FE. 90-2009). Sang Mun Ri (North Korean), *Mount Paektu and Heaven Lake,* 2008. Oil on cotton canvas, 91 x 131 cm (FE 93-2009). All dimensions are for paintings after stretching.
 
 [^13]: The Constable project funded some assistance, which was provided by Rachel Turnbull and Clare Richardson, and for a short time by Kate Stonor.
 
